corrected provider picture positioning on mobile

--- a/client/src/Pages/HomePage/hp.css
+++ b/client/src/Pages/HomePage/hp.css
@@ -47,12 +47,13 @@
         display: block;
     };
 
-    .hpImages2 {
-        /* display: block; */
-    }
 
     .providerImg {
         margin-top: 30px;
+        margin-bottom: 30px;
+    }
+
+    .clientImg {
         margin-bottom: 30px;
     }
 
